--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -18,8 +18,8 @@
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"eslint": "^8.56.0",
-		"eslint-plugin-svelte": "^2.36.0-next.4",
-		"svelte": "^5.0.0-next.1",
+		"eslint-plugin-svelte": "^2.35.1",
+		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
